--- a/storage/templates/storage/assets.html
+++ b/storage/templates/storage/assets.html
@@ -10,7 +10,7 @@
     var csrftoken = '{{ csrf_token }}';
 
     var vol_map = new Map();
-    {% for type in types %}
+    {% for type in storage_cl|get_attr:'types' %}
         {% for good in transport|get_attr:type %}
             vol_map.set('{{ good }}', '{{ transport|get_attr:type|dict_key:good }}');
         {% endfor %}
@@ -37,7 +37,6 @@
     st_{{ storage.pk }}_map[{{ storage.pk }}] = 0;
     send_storages_map[{{ storage.pk }}] = st_{{ storage.pk }}_map;
     {% endfor %}
-    console.log(send_storages_map);
 </script>
 <script src='{% static "js/assets.js" %}?{{ csrf_token }}'></script>
 {% endblock %}
@@ -64,17 +63,18 @@
                     </div>
                 </div>
 
-                {% for mineral in storage.minerals %}
-                {% if storage|get_attr:mineral %}
+                {% for group in storage_cl|get_attr:'types' %}
+                    {% for good in storage_cl|get_attr:group %}
+                        {% if storage|get_attr:good %}
                 <div class="row" style="margin-top: 3%;">
                     <div class="col-xs-2 col-sm-2 col-md-2">
-                    {{ storage.minerals|dict_key:mineral }}:
+                    {{ storage_cl|get_attr:group|dict_key:good }}:
                     </div>
                     <div class="col-xs-2 col-sm-2 col-md-2">
-                    <input style="width: 100%" type="number" class="good_input" data-good_name="{{ mineral }}" data-storage_id="{{ storage.pk }}" min="0" max="{% localize off %}{{ storage|get_attr:mineral }}{% endlocalize %}" value="0" step="1" name="{{ storage.pk }}_{{ mineral }}" maxlength="3">
+                    <input style="width: 100%" type="number" class="good_input" data-good_name="{{ good }}" data-storage_id="{{ storage.pk }}" min="0" max="{% localize off %}{{ storage|get_attr:good }}{% endlocalize %}" value="0" step="1" name="{{ storage.pk }}_{{ good }}" maxlength="3">
                     </div>
                     <div class="col-xs-2 col-sm-2 col-md-2">
-                    / {{ storage|get_attr:mineral }}
+                    / {{ storage|get_attr:good }}
                     </div>
                     <div class="col-xs-2 col-sm-2 col-md-2">
                     </div>
@@ -82,84 +82,11 @@
                         Объём (ед.):
                     </div>
                     <div class="col-xs-2 col-sm-2 col-md-2">
-                        <div id="{{ storage.pk }}_{{ mineral }}_places" data-text="0">0</div>
+                        <div id="{{ storage.pk }}_{{ good }}_places" data-text="0">0</div>
                     </div>
                 </div>
-                {% endif %}
-                {% endfor %}
-
-                {% for oil in storage.oils %}
-                {% if storage|get_attr:oil %}
-                <div class="row" style="margin-top: 3%;">
-                    <div class="col-xs-2 col-sm-2 col-md-2">
-                    {{ storage.oils|dict_key:oil }}:
-                    </div>
-                    <div class="col-xs-2 col-sm-2 col-md-2">
-                    <input style="width: 100%" type="number" class="good_input" data-good_name="{{ oil }}" data-storage_id="{{ storage.pk }}" min="0" max="{% localize off %}{{ storage|get_attr:oil }}{% endlocalize %}" value="0" step="1" name="{{ storage.pk }}_{{ oil }}" maxlength="3">
-                    </div>
-                    <div class="col-xs-2 col-sm-2 col-md-2">
-                    / {{ storage|get_attr:oil }}
-                    </div>
-                    <div class="col-xs-2 col-sm-2 col-md-2">
-                    </div>
-                    <div class="col-xs-2 col-sm-2 col-md-2">
-                        Объём (ед.):
-                    </div>
-                    <div class="col-xs-2 col-sm-2 col-md-2">
-                        <div id="{{ storage.pk }}_{{ oil }}_places" data-text="0">0</div>
-                    </div>
-                </div>
-                {% endif %}
-                {% endfor %}
-
-                {% for material in storage.materials %}
-                {% if storage|get_attr:material %}
-                <div class="row" style="margin-top: 3%;">
-                    <div class="col-xs-2 col-sm-2 col-md-2">
-                    {{ storage.materials|dict_key:material }}:
-                    </div>
-                    <div class="col-xs-2 col-sm-2 col-md-2">
-                    <input style="width: 100%" type="number" class="good_input" data-good_name="{{ material }}" data-storage_id="{{ storage.pk }}" min="0" max="{% localize off %}{{ storage|get_attr:material }}{% endlocalize %}" value="0" step="1" name="{{ storage.pk }}_{{ material }}" maxlength="3">
-                    </div>
-                    <div class="col-xs-2 col-sm-2 col-md-2">
-                    / {{ storage|get_attr:material }}
-                    </div>
-                    <div class="col-xs-2 col-sm-2 col-md-2">
-                    </div>
-                    <div class="col-xs-2 col-sm-2 col-md-2">
-                        Объём (ед.):
-                    </div>
-                    <div class="col-xs-2 col-sm-2 col-md-2">
-                        <div id="{{ storage.pk }}_{{ material }}_places" data-text="0">0</div>
-                    </div>
-                </div>
-                {% endif %}
-                {% endfor %}
-
-                {% for unit in storage.units %}
-                {% if storage|get_attr:unit %}
-                <div class="row" style="margin-top: 3%;">
-                    <div class="col-xs-2 col-sm-2 col-md-2">
-                    {{ storage.units|dict_key:unit }}:
-                    </div>
-                    <div class="col-xs-2 col-sm-2 col-md-2">
-                    <input style="width: 100%" type="number" class="good_input" data-good_name="{{ unit }}" data-storage_id="{{ storage.pk }}" min="0" max="{% localize off %}{{ storage|get_attr:unit }}{% endlocalize %}" value="0" step="1" name="{{ storage.pk }}_{{ unit }}" maxlength="3">
-                    </div>
-                    <div class="col-xs-2 col-sm-2 col-md-2">
-                    / {{ storage|get_attr:unit }}
-                    </div>
-                    {% if not unit == 'station' %}
-                    <div class="col-xs-2 col-sm-2 col-md-2">
-                    </div>
-                    <div class="col-xs-2 col-sm-2 col-md-2">
-                        Объём (ед.):
-                    </div>
-                    <div class="col-xs-2 col-sm-2 col-md-2">
-                        <div id="{{ storage.pk }}_{{ unit }}_places" data-text="0">0</div>
-                    </div>
-                    {% endif %}
-                </div>
-                {% endif %}
+                        {% endif %}
+                    {% endfor %}
                 {% endfor %}
 
             </div>
