--- a/player/templates/player/menu.html
+++ b/player/templates/player/menu.html
@@ -4,3 +4,4 @@
 <br><br><a href="/party">Партия</a>
 <br><br><a href="/storage">Склад</a>
 <br><br><a href="/assets">Активы</a>
+<br><br><a href="/trading">Торговля</a>
