--- a/storage/templates/storage/assets.html
+++ b/storage/templates/storage/assets.html
@@ -76,6 +76,7 @@
                     <div class="col-xs-2 col-sm-2 col-md-2">
                     / {{ storage|get_attr:good }}
                     </div>
+                    {% if not good == 'station' %}
                     <div class="col-xs-2 col-sm-2 col-md-2">
                     </div>
                     <div class="col-xs-2 col-sm-2 col-md-2">
@@ -84,6 +85,7 @@
                     <div class="col-xs-2 col-sm-2 col-md-2">
                         <div id="{{ storage.pk }}_{{ good }}_places" data-text="0">0</div>
                     </div>
+                    {% endif %}
                 </div>
                         {% endif %}
                     {% endfor %}
