Фильтрация ордеров по критериям

--- a/storage/templates/storage/trading/trading.html
+++ b/storage/templates/storage/trading/trading.html
@@ -5,13 +5,13 @@
 {% load get_len %}
 {% load l10n %}{% load i18n %}
 {% block for_scripts_and_css %}
-<script src='{% static "js/trading.js" %}?{{ csrf_token }}'></script>
 <script src='{% static "js/tablesort.js" %}?{{ csrf_token }}'></script>
 <script src='{% static "js/tablesort.number.js" %}?{{ csrf_token }}'></script>
+<script src='{% static "js/trading.js" %}?{{ csrf_token }}'></script>
+<link rel="stylesheet" href='{% static "css/tablesort.css" %}?{{ csrf_token }}'>
 {% endblock %}
 
 {% block content %}
-<script type="text/javascript">onload = function() {var myTable = new SortedTable();}</script>
 <script>
     var csrftoken = '{{ csrf_token }}';
 
@@ -26,11 +26,13 @@
 </script>
 <div class="col-xs-10 col-sm-10 col-md-10">
     <div id="goods_list" align="center">
+        <font id="offers_help" style="color: black">Выберите один или несколько критериев справа и нажмите "Поиск"</font>
 <!--        Выберите товары по критериям слева-->
-        <table id="lines" class="sort">
+        <table id="lines" class="sort" style="display: none">
+<!--        <table id="lines" class="sort">-->
           <thead>
             <tr>
-              <th role="columnheader">Товар</th>
+              <th data-sort-default role="columnheader">Товар</th>
               <th role="columnheader">Владелец</th>
               <th role="columnheader">Регион</th>
               <th role="columnheader">Количество</th>
@@ -40,68 +42,57 @@
             </tr>
           </thead>
           <tbody>
-            {% for storage in storages %}
-            <tr>
-              <td>{{ storage.pk }}</td>
-              <td>{{ storage.owner.nickname }}</td>
-              <td>{{ storage.region.region_name }}</td>
-              <td>{{ storage.region.region_name }}</td>
-              <td>{{ storage.region.region_name }}</td>
-              <td>{{ storage.region.region_name }}</td>
-              <td>{{ storage.region.region_name }}</td>
-            </tr>
-            {% endfor %}
+          <!--торговые предложения-->
           </tbody>
         </table>
     </div>
-    <script>
-        new Tablesort(document.getElementById('lines'));
-    </script>
 </div>
 <div class="col-xs-2 col-sm-2 col-md-2" align="center">
     <div class="row" style="margin-top: 5%;">
         <a class="save btn btn-success" style="width: 100%" href="/new_offer">Создать</a>
     </div>
-    <div class="row" style="margin-top: 15%">
-        <select name="trade_actions" id="trade_actions" style="width: 100%">
-            <option selected value='sell'>Продажа</option>
-            <option value='buy'>Покупка</option>
-        </select>
-    </div>
-    <div class="row" style="margin-top: 5%">
-        <select name="trade_range" id="trade_range" style="width: 100%">
-            <option selected value='all'>Весь мир</option>
-            <option value='state'>Государство</option>
-            <option value='range'>Соседние регионы</option>
-            <option value='this'>Этот регион</option>
-        </select>
-    </div>
-    <div class="row" style="margin-top: 5%">
-        <select name="trade_owner" id="trade_owner" style="width: 100%">
-            <option selected value='all'>Все</option>
-            <option value='party'>Партия</option>
-            <option value='mine'>Мои</option>
-        </select>
-    </div>
-    <div class="row" style="margin-top: 5%">
-        <select name="trade_groups" id="trade_groups" multiple size="{{ storage_cl|get_attr:'types'|get_len }}" style="width: 100%">
-            {% for group in storage_cl|get_attr:'types' %}
-            <option value='{{ group }}'>{{ storage_cl|get_attr:'types'|dict_key:group }}</option>
-            {% endfor %}
-        </select>
-    </div>
-    <div class="row" style="margin-top: 5%">
-        <select name="trade_goods" id="trade_goods" style="width: 100%">
-            <option id="good_default" value='default' disabled selected value>Выберите товар</option>
-            {% for group in storage_cl|get_attr:'types' %}
-                {% for good in storage_cl|get_attr:group %}
-            <option id="good_{{ good }}" value='{{ good }}' style="display: none">{{ storage_cl|get_attr:group|dict_key:good }}</option>
+    <form id="offers_search_form" role="form">
+        <div class="row" style="margin-top: 15%">
+            <select name="trade_actions" id="trade_actions" style="width: 100%">
+                <option selected value='sell'>Продажа</option>
+                <option value='buy'>Покупка</option>
+            </select>
+        </div>
+<!--        <div class="row" style="margin-top: 5%">-->
+<!--            <select name="trade_range" id="trade_range" style="width: 100%">-->
+<!--                <option selected value='all'>Весь мир</option>-->
+<!--                <option value='state'>Государство</option>-->
+<!--                <option value='range'>Соседние регионы</option>-->
+<!--                <option value='this'>Этот регион</option>-->
+<!--            </select>-->
+<!--        </div>-->
+        <div class="row" style="margin-top: 5%">
+            <select name="trade_owner" id="trade_owner" style="width: 100%">
+                <option selected value='all'>Все</option>
+                <option value='party'>Партия</option>
+                <option value='mine'>Мои</option>
+            </select>
+        </div>
+        <div class="row" style="margin-top: 5%">
+            <select name="trade_groups" id="trade_groups" multiple size="{{ storage_cl|get_attr:'types'|get_len }}" style="width: 100%">
+                {% for group in storage_cl|get_attr:'types' %}
+                <option value='{{ group }}'>{{ storage_cl|get_attr:'types'|dict_key:group }}</option>
                 {% endfor %}
-            {% endfor %}
-        </select>
-    </div>
-    <div class="row" style="margin-top: 5%;">
-        <button id="accept" type="submit" enctype="multipart/form-data" class="save btn btn-info" style="width: 100%">Поиск</button>
-    </div>
+            </select>
+        </div>
+        <div class="row" style="margin-top: 5%">
+            <select name="cc" id="trade_goods" style="width: 100%">
+                <option id="good_default" value='default' disabled selected value>Выберите товар</option>
+                {% for group in storage_cl|get_attr:'types' %}
+                    {% for good in storage_cl|get_attr:group %}
+                <option id="good_{{ good }}" value='{{ good }}' style="display: none">{{ storage_cl|get_attr:group|dict_key:good }}</option>
+                    {% endfor %}
+                {% endfor %}
+            </select>
+        </div>
+        <div class="row" style="margin-top: 5%;">
+            <button id="accept" type="submit" enctype="multipart/form-data" class="save btn btn-info" style="width: 100%">Поиск</button>
+        </div>
+    </form>
 </div>
 {% endblock %}
