--- a/region/templates/region/region_info.html
+++ b/region/templates/region/region_info.html
@@ -36,7 +36,7 @@
         <div align="center">
             <b><font size="3" color="white">
             {% if player.destination %}
-                {% trans 'you_fly_to' %} <img src='static/img/regions/{{ player.destination.on_map_id }}.png' class='image' width='30' height='30'> {{ player.destination }}
+                {% trans 'Вы летите в' %} <img src='static/img/regions/{{ player.destination.on_map_id }}.png' class='image' width='30' height='30'> {{ player.destination }}
             {% else %}
                 {% if region == player.region %}
                     {% trans 'Вы здесь' %}
@@ -49,8 +49,6 @@
         {% if not player.destination and region != player.region %}
         <form class="to_fly_form" method="post" action="{% url 'map' %}" style="margin-top: 1%">
             {% csrf_token %}
-            <input type="hidden" name="cost" value="{{ cost }}">
-            <input type="hidden" name="duration" value="{{ duration }}">
             <input type="hidden" class="region_id" name="region" value="{{ region.on_map_id }}">
             <input type="submit" class="btn btn-success" value="{% trans 'Отправиться' %}, - {{ cost }}" style="font-weight: bold; font-size: 15px;"/>
         </form>
